--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet" integrity="sha384-pzjw8f+ua7Kw1TIqPsUL2hrz+8f6l8J6q1rt5XKvfpzHvxSZtNLH9upxb3dhlCh9" crossorigin="anonymous">
+    <link rel="icon" href="img/logo-miner-ribo.png" type="image/png">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -59,6 +60,14 @@
             <h1 class="display-4 fw-bold">Prepárate para liderar la maquinaria pesada</h1>
             <p class="lead">Transforma tu futuro con la capacitación más completa en maquinaria pesada del país.</p>
             <a href="#" class="btn btn-primary btn-lg mt-3">¡Inscríbete Ahora!</a>
+        </div>
+    </section>
+
+    <!-- Sección de Oferta -->
+    <section id="oferta" class="py-4 bck-primary text-center">
+        <div class="container">
+            <h2 class="mb-3 text-dark">¡Oferta Especial!</h2>
+            <p class="lead text-dark mb-0">Por matricularte lleva <strong>GRATIS</strong> el <strong>paquete estudiantil</strong> que incluye Polo, Chaleco y Casco.</p>
         </div>
     </section>
 
