--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                         <a class="nav-link active" href="#hero">Inicio</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#oferta">Oferta</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#por-que-nosotros">Nosotros</a>
                     </li>
                     <li class="nav-item">
@@ -67,7 +70,7 @@
     <section id="oferta" class="py-4 bck-primary text-center">
         <div class="container">
             <h2 class="mb-3 text-dark">¡Oferta Especial!</h2>
-            <p class="lead text-dark mb-0">Por matricularte lleva <strong>GRATIS</strong> el <strong>paquete estudiantil</strong> que incluye Polo, Chaleco y Casco.</p>
+            <p class="lead text-dark mb-0">Por matricularte lleva <strong>GRATIS</strong> el <strong>paquete estudiantil</strong> que incluye Polo, Chaleco y Casco de Nuestra Institución.</p>
         </div>
     </section>
 
