offer correction and more words marketing

--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
     <section id="hero" class="hero text-white text-center d-flex flex-column justify-content-center align-items-center">
         <div class="container">
             <img src="img/logo-miner-ribo.png" alt="Logo MINER RIBO" class="img-fluid" style="max-width: 200px;">
-            <h1 class="display-4 fw-bold">Prepárate para liderar la maquinaria pesada</h1>
-            <p class="lead">Transforma tu futuro con la capacitación más completa en maquinaria pesada del país.</p>
-            <a href="#" class="btn btn-primary btn-lg mt-3">¡Inscríbete Ahora!</a>
+            <h1 class="display-4 fw-bold">¡Domina la Maquinaria Pesada y Asegura tu Futuro!</h1>
+            <p class="lead">Capacítate con expertos y obtén certificaciones que te abrirán las puertas en el sector minería y construcción.</p>
+            <a href="#" class="btn btn-danger btn-lg mt-3">¡Reserva tu lugar ahora!</a>
         </div>
     </section>
 
-    <!-- Sección de Oferta -->
     <section id="oferta" class="py-4 bck-primary text-center">
         <div class="container">
-            <h2 class="mb-3 text-dark">¡Oferta Especial!</h2>
-            <p class="lead text-dark mb-0">Por matricularte lleva <strong>GRATIS</strong> el <strong>paquete estudiantil</strong> que incluye Polo, Chaleco y Casco de Nuestra Institución.</p>
+            <h2 class="mb-3 text-dark">¡Oferta Exclusiva por Tiempo Limitado!</h2>
+            <p class="lead text-dark mb-0">Inscríbete hoy y recibe <strong>COMPLETAMENTE GRATIS</strong> nuestro <strong>paquete estudiantil</strong>, que incluye <strong>separatas especializadas para las clases</strong>, además de un <strong>casco, chaleco y polo</strong> con el sello de calidad de nuestra institución.</p>
+            <p class="lead text-dark">¡No te pierdas esta oportunidad única de prepararte con los mejores y destacar en el campo laboral!</p>
         </div>
     </section>
 
@@ -78,27 +78,27 @@
 
     <section id="por-que-nosotros" class="py-5">
         <div class="container">
-            <h2 class="text-center mb-5">¿Por qué elegirnos?</h2>
+            <h2 class="text-center mb-5">¿Por qué elegir <strong>MINER RIBO</strong>?</h2>
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="feature-box text-center">
                         <i class="fas fa-bullseye feature-icon mb-3"></i>
-                        <h3 class="feature-title">Nuestra Misión</h3>
-                        <p>Capacitar a operadores que marquen la diferencia en el campo, con un enfoque en la seguridad y la excelencia técnica.</p>
+                        <h3 class="feature-title">Misión Clara</h3>
+                        <p>Formamos operadores líderes con la seguridad y destreza técnica que las empresas más grandes buscan. ¡Garantiza tu empleo con nosotros!</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="feature-box text-center">
                         <i class="fas fa-drafting-compass feature-icon mb-3"></i>
-                        <h3 class="feature-title">Diferenciación</h3>
-                        <p>Te ofrecemos aprendizaje práctico con equipos reales, garantizando que domines la operación en cualquier entorno laboral.</p>
+                        <h3 class="feature-title">Práctica Real</h3>
+                        <p>Capacitación 100% práctica, usando maquinaria pesada de última generación en condiciones laborales reales.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="feature-box text-center">
                         <i class="fas fa-users feature-icon mb-3"></i>
-                        <h3 class="feature-title">¿Quiénes somos?</h3>
-                        <p>Somos una institución con más de 10 años de experiencia formando a los mejores operadores en el sector de la construcción y minería.</p>
+                        <h3 class="feature-title">10+ Años de Experiencia</h3>
+                        <p>Con más de una década de formación, cientos de egresados y alianzas con las mejores empresas de la industria minera y de construcción.</p>
                     </div>
                 </div>
             </div>
@@ -236,6 +236,7 @@
     <section id="planes" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Planes de Capacitación</h2>
+            <p class="text-center lead">¡Elige el plan que más se ajuste a tus necesidades y empieza a dominar la maquinaria pesada con los mejores!</p>
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-4">
                     <i class="fas fa-calendar-alt fa-2x color-primary"></i>
@@ -311,6 +312,7 @@
     <section id="beneficios" class="cursos-section py-5">
         <div class="container">
             <h2 class="text-center mb-5">Beneficios de Capacitarte con Nosotros</h2>
+            <p class="text-center">Más del 80% de nuestros egresados obtienen empleo en sus primeros 6 meses. ¡Tú puedes ser el próximo!</p>
             <div class="row g-4">
                 <div class="col-md-3">
                     <div class="benefit-box text-center p-4 shadow h-100">
