correct por que nosotros

--- a/index.html
+++ b/index.html
@@ -80,24 +80,24 @@
         <div class="container">
             <h2 class="text-center mb-5">¿Por qué elegir <strong>MINER RIBO</strong>?</h2>
             <div class="row g-4">
-                <div class="col-md-4">
+                <div class="col-md-4 h-100">
                     <div class="feature-box text-center">
                         <i class="fas fa-bullseye feature-icon mb-3"></i>
-                        <h3 class="feature-title">Misión Clara</h3>
+                        <h3 class="feature-title">Misión</h3>
                         <p>Formamos operadores líderes con la seguridad y destreza técnica que las empresas más grandes buscan. ¡Garantiza tu empleo con nosotros!</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 h-100">
                     <div class="feature-box text-center">
                         <i class="fas fa-drafting-compass feature-icon mb-3"></i>
                         <h3 class="feature-title">Práctica Real</h3>
                         <p>Capacitación 100% práctica, usando maquinaria pesada de última generación en condiciones laborales reales.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 h-100">
                     <div class="feature-box text-center">
                         <i class="fas fa-users feature-icon mb-3"></i>
-                        <h3 class="feature-title">10+ Años de Experiencia</h3>
+                        <h3 class="feature-title">Experiencia</h3>
                         <p>Con más de una década de formación, cientos de egresados y alianzas con las mejores empresas de la industria minera y de construcción.</p>
                     </div>
                 </div>
