--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="icon" href="img/logo-miner-ribo.png" type="image/png">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/whatsapp.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -62,7 +63,7 @@
             <img src="img/logo-miner-ribo.png" alt="Logo MINER RIBO" class="img-fluid" style="max-width: 200px;">
             <h1 class="display-4 fw-bold">¡Domina la Maquinaria Pesada y Asegura tu Futuro!</h1>
             <p class="lead">Capacítate con expertos y obtén certificaciones que te abrirán las puertas en el sector minería y construcción.</p>
-            <a href="#" class="btn btn-danger btn-lg mt-3">¡Reserva tu lugar ahora!</a>
+            <a href="https://wa.me/51903250374?text=¡Hola!%20No%20quiero%20perder%20la%20increíble%20oferta%20exclusiva%20por%20tiempo%20limitado.%20Quiero%20reservar%20mi%20lugar%20AHORA%20y%20obtener%20mi%20paquete%20estudiantil%20GRATIS.%20Estoy%20listo%20para%20dar%20el%20primer%20paso%20hacia%20un%20futuro%20exitoso%20con%20los%20mejores!" target="_blank" class="btn btn-danger btn-lg mt-3">¡Reserva tu lugar ahora y asegura tu paquete estudiantil GRATIS!</a>
         </div>
     </section>
 
@@ -261,7 +262,7 @@
                             <li><i class="fas fa-check"></i> Camión volquete</li>
                             <li><i class="fas fa-check"></i> Camioneta minera</li>
                         </ul>
-                        <a href="#" class="btn btn-outline-primary btn-plan-info">Más información</a>
+                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Básico.%20Estoy%20interesado%20en%20aprender%20a%20manejar%20las%20máquinas%20que%20ofrecen%20y%20aprovechar%20esta%20gran%20oportunidad%20de%20cambio." target="_blank" class="btn btn-outline-primary btn-plan-info">¡Quiero más información!</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -274,7 +275,7 @@
                             <li><i class="fas fa-check"></i> Personalización de cursos</li>
                             <li><i class="fas fa-check"></i> Dotación incluida</li>
                         </ul>
-                        <a href="#" class="btn btn-outline-primary btn-plan-info">Más información</a>
+                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Intermedio.%20Me%20interesa%20personalizar%20mi%20capacitación%20y%20aprovechar%20esta%20oferta%20única." target="_blank" class="btn btn-outline-primary btn-plan-info">¡Quiero más información!</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -287,7 +288,7 @@
                             <li><i class="fas fa-check"></i> Capacitación especializada</li>
                             <li><i class="fas fa-check"></i> Personalización avanzada</li>
                         </ul>
-                        <a href="#" class="btn btn-outline-primary btn-plan-info">Más información</a>
+                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Avanzado.%20Estoy%20listo%20para%20capacitarme%20especialmente%20en%202%20máquinas%20y%20destacar%20en%20mi%20carrera." target="_blank" class="btn btn-outline-primary btn-plan-info">¡Quiero más información!</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -300,7 +301,7 @@
                             <li><i class="fas fa-check"></i> Prácticas y certificación profesional</li>
                             <li><i class="fas fa-check"></i> Acceso a evaluaciones finales</li>
                         </ul>
-                        <a href="#" class="btn btn-outline-primary btn-plan-info">Más información</a>
+                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Profesional.%20Estoy%20listo%20para%20capacitarme%20intensivamente%20y%20obtener%20mi%20certificación%20profesional." target="_blank" class="btn btn-outline-primary btn-plan-info">¡Quiero más información!</a>
                     </div>
                 </div>
             </div>
@@ -355,7 +356,9 @@
                 <div class="col-md-10">
                     <div class="text-center mb-6">
                         <i class="fas fa-map-marker-alt fa-2x color-primary mb-3"></i>
+                        <h5 class="subtitle text-center">Dirección</h5>
                         <p>Nos encontramos en el corazón del distrito industrial. Visítanos para conocer nuestras instalaciones y ver de cerca nuestro equipo de maquinaria pesada.</p>
+                        <p><strong>Lora y Cordero 855, Timbre 301, Chiclayo 14001, Perú</strong></p>
                     </div>
 
                     <div class="row text-center mb-6">
@@ -369,13 +372,13 @@
                             <i class="fas fa-phone-alt fa-2x color-primary mb-2"></i>
                             <h5 class="subtitle text-center">Contacto</h5>
                             <p>Teléfono: <strong>+51 987 654 321</strong></p>
-                            <p>Email: <strong>minerribo@gmail.com</strong></p>
+                            <p>Email: <strong>escuelaminerribo@gmail.com</strong></p>
                         </div>
                     </div>
 
                     <div class="map-responsive">
                         <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.8590177273084!2d-122.08424938468188!3d37.42206597982574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbb41f7d4f1e5%3A0x10a2932dd194dd72!2sGoogleplex!5e0!3m2!1ses!2sus!4v1633038616552!5m2!1ses!2sus"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d623.9760548189088!2d-79.83888612252873!3d-6.769735658947669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x904ceed7b7636311%3A0xc4bce469de853693!2sLora%20y%20Cordero%20855%2C%20Chiclayo%2014001!5e0!3m2!1ses-419!2spe!4v1729577174818!5m2!1ses-419!2spe"
                                 width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
                         </iframe>
                     </div>
@@ -423,7 +426,6 @@
                     </div>
                 </div>
 
-                <!-- Colocamos los controles debajo del video -->
                 <div class="carousel-controls mt-3 d-flex justify-content-center">
                     <button class="carousel-control-prev" type="button" data-bs-target="#videoCarousel" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -440,6 +442,10 @@
 
     <div class="gradient-separator"></div>
 
+    <a href="https://wa.me/51903250374" target="_blank" class="btn-whatsapp">
+        <img src="img/icon-whatsapp.svg" alt="Contactar por WhatsApp">
+    </a>
+
     <footer>
         <div class="container">
             <div class="row text-center text-md-start">
@@ -447,8 +453,8 @@
                     <h5 class="color-primary"><b>Contacto</b></h5>
                     <ul class="list-unstyled">
                         <li><i class="fas fa-comments"></i> Chat con nosotros</li>
-                        <li><i class="fas fa-phone"></i> +51 987 654 321</li>
-                        <li><i class="fas fa-envelope"></i> minerribo@gmail.com</li>
+                        <li><i class="fas fa-phone"></i> +51 903 250 374</li>
+                        <li><i class="fas fa-envelope"></i> escuelaminerribo@gmail.com</li>
                     </ul>
                 </div>
                 <div class="col-md-3 mb-3">
@@ -475,7 +481,7 @@
                 <div class="col-md-3 mb-3">
                     <h5 class="color-primary"><b>Síguenos</b></h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white"><i class="fab fa-facebook fa-lg"></i> Facebook</a></li>
+                        <li><a href="https://web.facebook.com/profile.php?id=61566976067887&locale=es_LA" target="_blank" class="text-white"><i class="fab fa-facebook fa-lg"></i> Facebook</a></li>
                         <li><a href="#" class="text-white"><i class="fab fa-instagram fa-lg"></i> Instagram</a></li>
                         <li><a href="#" class="text-white"><i class="fab fa-youtube fa-lg"></i> YouTube</a></li>
                     </ul>
