correcion de icono de whatsapp

--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
 
     <div class="gradient-separator"></div>
 
+    <!--- Botón de WhatsApp --->
     <a href="https://wa.me/51903250374" target="_blank" class="btn-whatsapp">
         <img src="img/icon-whatsapp.svg" alt="Contactar por WhatsApp">
     </a>
