--- a/index.html
+++ b/index.html
@@ -442,8 +442,10 @@
 
     <div class="gradient-separator"></div>
 
-    <!--- Botón de WhatsApp --->
-    <a href="https://wa.me/51903250374" target="_blank" class="btn-whatsapp">
+    <a
+            href="https://wa.me/51903250374?text=¡Hola!%20No%20quiero%20perder%20la%20increíble%20oferta%20exclusiva%20por%20tiempo%20limitado.%20Quiero%20reservar%20mi%20lugar%20AHORA%20y%20obtener%20mi%20paquete%20estudiantil%20GRATIS.%20Estoy%20listo%20para%20dar%20el%20primer%20paso%20hacia%20un%20futuro%20exitoso%20con%20los%20mejores!"
+            target="_blank" class="btn-whatsapp"
+    >
         <img src="img/icon-whatsapp.svg" alt="Contactar por WhatsApp">
     </a>
 
