eliminacion de galeria

--- a/index.html
+++ b/index.html
@@ -393,12 +393,16 @@
         <div class="container">
             <h2 class="text-center mb-5">Galería</h2>
             <h3 class="subtitle">Imágenes</h3>
+            <p class="text-center">A ocurrido un error, Proximamente se mostraran las imagenes</p>
+            <!--
             <div class="gallery-grid" id="images">
-                <!-- Imágenes de la galería (generadas por JS) -->
+                Imágenes de la galería (generadas por JS)
             </div>
+            -->
 
             <h3 class="mt-5 subtitle">Videos</h3>
-            <div id="videoCarousel" class="carousel slide" data-bs-ride="false">
+            <p class="text-center">A ocurrido un error, Proximamente se mostraran los videos</p>
+            <!-- <div id="videoCarousel" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="d-flex justify-content-center">
@@ -436,7 +440,7 @@
                         <span class="visually-hidden">Siguiente</span>
                     </button>
                 </div>
-            </div>
+            </div>  -->
         </div>
     </section>
 
