cambio de imagenes y videos de la galeria

--- a/index.html
+++ b/index.html
@@ -393,21 +393,17 @@
         <div class="container">
             <h2 class="text-center mb-5">Galería</h2>
             <h3 class="subtitle">Imágenes</h3>
-            <p class="text-center">A ocurrido un error, Proximamente se mostraran las imagenes</p>
-            <!--
             <div class="gallery-grid" id="images">
-                Imágenes de la galería (generadas por JS)
+
             </div>
-            -->
 
             <h3 class="mt-5 subtitle">Videos</h3>
-            <p class="text-center">A ocurrido un error, Proximamente se mostraran los videos</p>
-            <!-- <div id="videoCarousel" class="carousel slide" data-bs-ride="false">
+            <div id="videoCarousel" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="d-flex justify-content-center">
                             <video id="video1" controls class="d-block w-100">
-                                <source src="video/video1.mp4" type="video/mp4">
+                                <source src="video/cargado_material.mp4" type="video/mp4">
                                 Tu navegador no soporta la reproducción de videos.
                             </video>
                         </div>
@@ -415,15 +411,7 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
                             <video id="video2" controls class="d-block w-100">
-                                <source src="video/video2.mp4" type="video/mp4">
-                                Tu navegador no soporta la reproducción de videos.
-                            </video>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <video id="video3" controls class="d-block w-100">
-                                <source src="video/video3.mp4" type="video/mp4">
+                                <source src="video/excavacion.mp4" type="video/mp4">
                                 Tu navegador no soporta la reproducción de videos.
                             </video>
                         </div>
@@ -440,7 +428,7 @@
                         <span class="visually-hidden">Siguiente</span>
                     </button>
                 </div>
-            </div>  -->
+            </div>
         </div>
     </section>
 
