--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             <img src="img/logo-miner-ribo.png" alt="Logo MINER RIBO" class="img-fluid" style="max-width: 200px;">
             <h1 class="display-4 fw-bold">¡Domina la Maquinaria Pesada y Asegura tu Futuro!</h1>
             <p class="lead">Capacítate con expertos y obtén certificaciones que te abrirán las puertas en el sector minería y construcción.</p>
-            <a href="https://wa.me/51903250374?text=¡Hola!%20No%20quiero%20perder%20la%20increíble%20oferta%20exclusiva%20por%20tiempo%20limitado.%20Quiero%20reservar%20mi%20lugar%20AHORA%20y%20obtener%20mi%20paquete%20estudiantil%20GRATIS.%20Estoy%20listo%20para%20dar%20el%20primer%20paso%20hacia%20un%20futuro%20exitoso%20con%20los%20mejores!" target="_blank" class="btn btn-danger btn-lg mt-3">¡Reserva tu lugar ahora y asegura tu paquete estudiantil GRATIS!</a>
+            <p class="lead">RUC: 20613222562</p>
+            <a href="https://wa.me/51903250374?text=¡Hola!%20No%20quiero%20perder%20la%20increíble%20oferta%20exclusiva%20por%20tiempo%20limitado.%20Quiero%20reservar%20mi%20lugar%20AHORA%20y%20obtener%20mi%20paquete%20estudiantil%20GRATIS.%20Estoy%20listo%20para%20dar%20el%20primer%20paso%20hacia%20un%20futuro%20exitoso%20con%20los%20mejores!" target="_blank" class="btn btn-danger btn-lg mt-3">¡Matrícula Gratis!</a>
+            <p class="text-center text-danger fw-bold">Próximo inicio de clases: <strong>26 de enero</strong></p>
         </div>
     </section>
 
@@ -238,6 +240,8 @@
         <div class="container">
             <h2 class="text-center mb-5">Planes de Capacitación</h2>
             <p class="text-center lead">¡Elige el plan que más se ajuste a tus necesidades y empieza a dominar la maquinaria pesada con los mejores!</p>
+            <p class="text-center text-danger fw-bold">Próximo inicio de clases: <strong>26 de enero</strong></p>
+            <div class="row justify-content-center">
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-4">
                     <i class="fas fa-calendar-alt fa-2x color-primary"></i>
@@ -484,6 +488,7 @@
             </div>
             <div class="row mt-4">
                 <div class="col text-center">
+                    <p>RUC: 20613222562</p>
                     <p>
                         © <span id="year"></span> Escuela de Operadores <strong>MINER RIBO</strong>
                         <span class="color-primary">|</span> Desarrollado por
