correccion de oferta y agregacion de nuevo numero

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h1 class="display-4 fw-bold">¡Domina la Maquinaria Pesada y Asegura tu Futuro!</h1>
             <p class="lead">Capacítate con expertos y obtén certificaciones que te abrirán las puertas en el sector minería y construcción.</p>
             <p class="lead">RUC: 20613222562</p>
-            <a href="https://wa.me/51903250374?text=¡Hola!%20No%20quiero%20perder%20la%20increíble%20oferta%20exclusiva%20por%20tiempo%20limitado.%20Quiero%20reservar%20mi%20lugar%20AHORA%20y%20obtener%20mi%20paquete%20estudiantil%20GRATIS.%20Estoy%20listo%20para%20dar%20el%20primer%20paso%20hacia%20un%20futuro%20exitoso%20con%20los%20mejores!" target="_blank" class="btn btn-danger btn-lg mt-3">¡Matrícula Gratis!</a>
+            <a href="https://wa.me/51903250374?text=¡Hola!%20No%20quiero%20perder%20la%20increíble%20oferta%20exclusiva%20por%20tiempo%20limitado.%20Quiero%20reservar%20mi%20lugar%20AHORA%20y%20obtener%20mi%20paquete%20estudiantil%20GRATIS.%20Estoy%20listo%20para%20dar%20el%20primer%20paso%20hacia%20un%20futuro%20exitoso%20con%20los%20mejores!" target="_blank" class="btn btn-danger btn-lg mt-3">¡Descuento del 50%!</a>
             <p class="text-center text-danger fw-bold">Próximo inicio de clases: <strong>26 de enero</strong></p>
         </div>
     </section>
@@ -453,6 +453,7 @@
                     <ul class="list-unstyled">
                         <li><i class="fas fa-comments"></i> Chat con nosotros</li>
                         <li><i class="fas fa-phone"></i> +51 903 250 374</li>
+                        <li><i class="fas fa-phone"></i> +51 918 159 231</li>
                         <li><i class="fas fa-envelope"></i> escuelaminerribo@gmail.com</li>
                     </ul>
                 </div>
