corrección de información de cursos

--- a/index.html
+++ b/index.html
@@ -254,59 +254,77 @@
                 </div>
             </div>
             <div class="row g-4 justify-content-center">
-                <div class="col-md-3">
-                    <div class="plan-card p-4 shadow-sm rounded text-center">
-                        <h3 class="plan-title mb-3">Curso Básico</h3>
-                        <p>6 máquinas</p>
-                        <p>Duración: 14 meses</p>
-                        <ul class="list-unstyled text-start">
-                            <li><i class="fas fa-check"></i> Retroexcavadora</li>
-                            <li><i class="fas fa-check"></i> Minicargador</li>
-                            <li><i class="fas fa-check"></i> Montacarga</li>
-                            <li><i class="fas fa-check"></i> Rodillo compactador</li>
-                            <li><i class="fas fa-check"></i> Camión volquete</li>
-                            <li><i class="fas fa-check"></i> Camioneta minera</li>
+                <!-- Curso Básico -->
+                <div class="col-md-4">
+                    <div class="plan-card p-4 shadow-sm rounded text-center h-100 d-flex flex-column">
+                        <h3 class="plan-title mb-3"><i class="fas fa-cogs"></i> Curso Básico</h3>
+                        <p><i class="fas fa-clock"></i> <b>Duración</b>: 9 meses</p>
+                        <p><i class="fas fa-tools"></i> <b>Máquinas</b>: Minicargador, Montacarga, Camioneta y Volquete</p>
+                        <ul class="list-unstyled text-start flex-grow-1">
+                            <li><i class="fas fa-book"></i> <b>Teoría</b>: 3 meses.</li>
+                            <li><i class="fas fa-wrench"></i> <b>Talleres</b>: 1 mes.</li>
+                            <li><i class="fas fa-truck"></i> <b>Práctica</b>: 6 meses.</li>
                         </ul>
-                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Básico.%20Estoy%20interesado%20en%20aprender%20a%20manejar%20las%20máquinas%20que%20ofrecen%20y%20aprovechar%20esta%20gran%20oportunidad%20de%20cambio." target="_blank" class="btn btn-outline-primary btn-plan-info">¡Quiero más información!</a>
+                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Básico.%20Estoy%20interesado%20en%20este%20programa." target="_blank" class="btn btn-outline-primary btn-plan-info mt-auto">¡Quiero más información!</a>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="plan-card p-4 shadow-sm rounded text-center">
-                        <h3 class="plan-title mb-3">Curso Avanzado</h3>
-                        <p>2 máquinas</p>
-                        <p>Duración: 3 meses</p>
-                        <ul class="list-unstyled text-start">
-                            <li><i class="fas fa-check"></i> Escoge 2 máquinas</li>
-                            <li><i class="fas fa-check"></i> Capacitación especializada</li>
-                            <li><i class="fas fa-check"></i> Personalización avanzada</li>
+
+                <!-- Curso Avanzado -->
+                <div class="col-md-4">
+                    <div class="plan-card p-4 shadow-sm rounded text-center h-100 d-flex flex-column">
+                        <h3 class="plan-title mb-3"><i class="fas fa-graduation-cap"></i> Curso Avanzado</h3>
+                        <p><i class="fas fa-clock"></i> <b>Duración</b>: 3 meses</p>
+                        <p><i class="fas fa-cogs"></i> <b>Máquinas</b>: Escoge 1 máquina</p>
+                        <ul class="list-unstyled text-start flex-grow-1">
+                            <li><i class="fas fa-book"></i> <b>Teoría</b>: 1 mes.</li>
+                            <li><i class="fas fa-wrench"></i> <b>Práctica</b>: 2 meses.</li>
                         </ul>
-                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Avanzado.%20Estoy%20listo%20para%20capacitarme%20especialmente%20en%202%20máquinas%20y%20destacar%20en%20mi%20carrera." target="_blank" class="btn btn-outline-primary btn-plan-info">¡Quiero más información!</a>
+                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Avanzado.%20Estoy%20listo%20para%20capacitarme%20en%20una%20máquina%20especializada." target="_blank" class="btn btn-outline-primary btn-plan-info mt-auto">¡Quiero más información!</a>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="plan-card p-4 shadow-sm rounded text-center">
-                        <h3 class="plan-title mb-3">Curso Intermedio</h3>
-                        <p>3 máquinas</p>
-                        <p>Duración: 6 meses</p>
-                        <ul class="list-unstyled text-start">
-                            <li><i class="fas fa-check"></i> Escoge 3 máquinas</li>
-                            <li><i class="fas fa-check"></i> Personalización de cursos</li>
-                            <li><i class="fas fa-check"></i> Dotación incluida</li>
+
+                <!-- Curso Intermedio -->
+                <div class="col-md-4">
+                    <div class="plan-card p-4 shadow-sm rounded text-center h-100 d-flex flex-column">
+                        <h3 class="plan-title mb-3"><i class="fas fa-tools"></i> Curso Intermedio</h3>
+                        <p><i class="fas fa-clock"></i> <b>Duración</b>: 6 meses</p>
+                        <p><i class="fas fa-cogs"></i> <b>Máquinas</b>: Escoge 2 máquinas</p>
+                        <ul class="list-unstyled text-start flex-grow-1">
+                            <li><i class="fas fa-book"></i> <b>Teoría</b>: 1 mes.</li>
+                            <li><i class="fas fa-wrench"></i> <b>Talleres</b>: 1 mes.</li>
+                            <li><i class="fas fa-truck"></i> <b>Práctica</b>: 4 meses.</li>
                         </ul>
-                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Intermedio.%20Me%20interesa%20personalizar%20mi%20capacitación%20y%20aprovechar%20esta%20oferta%20única." target="_blank" class="btn btn-outline-primary btn-plan-info">¡Quiero más información!</a>
+                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Intermedio.%20Me%20interesa%20capacitarme%20en%20dos%20máquinas." target="_blank" class="btn btn-outline-primary btn-plan-info mt-auto">¡Quiero más información!</a>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="plan-card p-4 shadow-sm rounded text-center">
-                        <h3 class="plan-title mb-3">Curso Profesional</h3>
-                        <p>1 máquina</p>
-                        <p>Duración: 12 meses</p>
-                        <ul class="list-unstyled text-start">
-                            <li><i class="fas fa-check"></i> Capacitación intensiva en 1 máquina</li>
-                            <li><i class="fas fa-check"></i> Prácticas y certificación profesional</li>
-                            <li><i class="fas fa-check"></i> Acceso a evaluaciones finales</li>
+
+                <!-- Curso Profesional -->
+                <div class="col-md-4">
+                    <div class="plan-card p-4 shadow-sm rounded text-center h-100 d-flex flex-column">
+                        <h3 class="plan-title mb-3"><i class="fas fa-award"></i> Curso Profesional</h3>
+                        <p><i class="fas fa-clock"></i> <b>Duración</b>: 12 meses</p>
+                        <p><i class="fas fa-cogs"></i> <b>Máquinas</b>: Escoge 1 máquina</p>
+                        <ul class="list-unstyled text-start flex-grow-1">
+                            <li><i class="fas fa-book"></i> <b>Teoría</b>: 3 meses.</li>
+                            <li><i class="fas fa-wrench"></i> <b>Talleres</b>: 1 mes.</li>
+                            <li><i class="fas fa-truck"></i> <b>Práctica</b>: 8 meses.</li>
                         </ul>
-                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Profesional.%20Estoy%20listo%20para%20capacitarme%20intensivamente%20y%20obtener%20mi%20certificación%20profesional." target="_blank" class="btn btn-outline-primary btn-plan-info">¡Quiero más información!</a>
+                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Profesional.%20Quiero%20certificarme%20en%20una%20máquina%20a%20nivel%20profesional." target="_blank" class="btn btn-outline-primary btn-plan-info mt-auto">¡Quiero más información!</a>
+                    </div>
+                </div>
+
+                <!-- Curso Múltiple -->
+                <div class="col-md-4">
+                    <div class="plan-card p-4 shadow-sm rounded text-center h-100 d-flex flex-column">
+                        <h3 class="plan-title mb-3"><i class="fas fa-layer-group"></i> Curso Múltiple</h3>
+                        <p><i class="fas fa-clock"></i> <b>Duración</b>: 14 meses</p>
+                        <p><i class="fas fa-tools"></i> <b>Máquinas</b>: Retroexcavadora, Minicargador, Montacarga, Camioneta, Minirodillo, Camión Volquete</p>
+                        <ul class="list-unstyled text-start flex-grow-1">
+                            <li><i class="fas fa-book"></i> <b>Teoría</b>: 3 meses.</li>
+                            <li><i class="fas fa-wrench"></i> <b>Talleres</b>: 2 meses.</li>
+                            <li><i class="fas fa-truck"></i> <b>Práctica</b>: 9 meses.</li>
+                        </ul>
+                        <a href="https://wa.me/51903250374?text=Hola,%20quiero%20más%20información%20sobre%20el%20Curso%20Múltiple.%20Quiero%20capacitarme%20en%20todas%20las%20máquinas%20disponibles." target="_blank" class="btn btn-outline-primary btn-plan-info mt-auto">¡Quiero más información!</a>
                     </div>
                 </div>
             </div>
@@ -436,9 +454,7 @@
             </div>
         </div>
     </section>
-
     <div class="gradient-separator"></div>
-
     <a
             href="https://wa.me/51903250374?text=¡Hola!%20No%20quiero%20perder%20la%20increíble%20oferta%20exclusiva%20por%20tiempo%20limitado.%20Quiero%20reservar%20mi%20lugar%20AHORA%20y%20obtener%20mi%20paquete%20estudiantil%20GRATIS.%20Estoy%20listo%20para%20dar%20el%20primer%20paso%20hacia%20un%20futuro%20exitoso%20con%20los%20mejores!"
             target="_blank" class="btn-whatsapp"
