corrección de oferta

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section id="oferta" class="py-4 bck-primary text-center">
         <div class="container">
             <h2 class="mb-3 text-dark">¡Oferta Exclusiva por Tiempo Limitado!</h2>
-            <p class="lead text-dark mb-0">Inscríbete hoy y recibe <strong>COMPLETAMENTE GRATIS</strong> nuestro <strong>paquete estudiantil</strong>, que incluye <strong>separatas especializadas para las clases</strong>, además de un <strong>casco, chaleco y polo</strong> con el sello de calidad de nuestra institución.</p>
+            <p class="lead text-dark mb-0">Inscríbete hoy y recibe <b>COMPLETAMENTE GRATIS</b> nuestro <strong>paquete estudiantil</strong>, que incluye <strong>separatas especializadas para las clases</strong>, además de un <strong>polo</strong> oficial de nuestra institución.</p>
             <p class="lead text-dark">¡No te pierdas esta oportunidad única de prepararte con los mejores y destacar en el campo laboral!</p>
         </div>
     </section>
