--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <div class="plan-card p-4 shadow-sm rounded text-center h-100 d-flex flex-column">
                         <h3 class="plan-title mb-3"><i class="fas fa-cogs"></i> Curso Básico</h3>
                         <p><i class="fas fa-clock"></i> <b>Duración</b>: 9 meses</p>
-                        <p><i class="fas fa-tools"></i> <b>Máquinas</b>: Minicargador, Montacarga, Camioneta y Volquete</p>
+                        <p><i class="fas fa-tools"></i> <b>Máquinas</b>: Mini Cargador, Montacargas, Camioneta minera y Camión Volquete</p>
                         <ul class="list-unstyled text-start flex-grow-1">
                             <li><i class="fas fa-book"></i> <b>Teoría</b>: 3 meses.</li>
                             <li><i class="fas fa-wrench"></i> <b>Talleres</b>: 1 mes.</li>
@@ -318,7 +318,7 @@
                     <div class="plan-card p-4 shadow-sm rounded text-center h-100 d-flex flex-column">
                         <h3 class="plan-title mb-3"><i class="fas fa-layer-group"></i> Curso Múltiple</h3>
                         <p><i class="fas fa-clock"></i> <b>Duración</b>: 14 meses</p>
-                        <p><i class="fas fa-tools"></i> <b>Máquinas</b>: Retroexcavadora, Minicargador, Montacarga, Camioneta, Minirodillo, Camión Volquete</p>
+                        <p><i class="fas fa-tools"></i> <b>Máquinas</b>: Retroexcavadora, Mini Cargador, Montacargas, Camioneta Minera, Mini Rodillo, Camión Volquete, Cargador frontal</p>
                         <ul class="list-unstyled text-start flex-grow-1">
                             <li><i class="fas fa-book"></i> <b>Teoría</b>: 3 meses.</li>
                             <li><i class="fas fa-wrench"></i> <b>Talleres</b>: 2 meses.</li>
