correction polo oficial

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
             <p class="lead">Capacítate con expertos y obtén certificaciones que te abrirán las puertas en el sector minería y construcción.</p>
             <p class="lead">RUC: 20613222562</p>
             <a href="https://wa.me/51903250374?text=¡Hola!%20No%20quiero%20perder%20la%20increíble%20oferta%20exclusiva%20por%20tiempo%20limitado.%20Quiero%20reservar%20mi%20lugar%20AHORA%20y%20obtener%20mi%20paquete%20estudiantil%20GRATIS.%20Estoy%20listo%20para%20dar%20el%20primer%20paso%20hacia%20un%20futuro%20exitoso%20con%20los%20mejores!" target="_blank" class="btn btn-danger btn-lg mt-3">¡Descuento del 50%!</a>
-            <p class="text-center text-danger fw-bold">Próximo inicio de clases: <strong>26 de enero</strong></p>
+            <p class="text-center text-danger fw-bold">Próximo inicio de clases: <strong>ESTE DOMINGO</strong></p>
         </div>
     </section>
 
     <section id="oferta" class="py-4 bck-primary text-center">
         <div class="container">
             <h2 class="mb-3 text-dark">¡Oferta Exclusiva por Tiempo Limitado!</h2>
-            <p class="lead text-dark mb-0">Inscríbete hoy y recibe <b>COMPLETAMENTE GRATIS</b> nuestro <strong>paquete estudiantil</strong>, que incluye <strong>separatas especializadas para las clases</strong>, además de un <strong>polo</strong> oficial de nuestra institución.</p>
+            <p class="lead text-dark mb-0">Inscríbete hoy y recibe <b>COMPLETAMENTE GRATIS</b> nuestro <strong>paquete estudiantil</strong>, que incluye <strong>separatas especializadas para las clases</strong>, además de un <b>equipo de seguridad.</b></p>
             <p class="lead text-dark">¡No te pierdas esta oportunidad única de prepararte con los mejores y destacar en el campo laboral!</p>
         </div>
     </section>
